feat: testimonal slider widget

--- a/index.html
+++ b/index.html
@@ -183,13 +183,13 @@ const AUTOPLAY_MS   = 3500;   // keep synced with --interval-ms if you change it
 let idx = 0, timer = null;
 
 const slides = [
-  { img: '/1.jpg',
+  { img: 'public/1.jpg',
     quote: 'Our Elysium Cinema, brought to life by MCBEE within our residence at DLF Camellias, Gurugram, is nothing short of extraordinary. They created an immersive cinematic environment that marries elegance and cutting-edge AV performance.',
     name: 'KP Singh', role: 'Chairman at DLF' },
-  { img: '/2.jpg',
+  { img: 'public/2.jpg',
     quote: 'MCBEE transformed our auditorium with flawless sound, crystal-clear visuals, and seamless controls. Every event now feels world-class.',
     name: 'Satya Nadella', role: 'CEO at Microsoft' },
-  { img: '/3.jpg',
+  { img: 'public/3.jpg',
     quote: 'Working with MCBEE transformed our flagship store into an immersive sensory experience. The lighting, signage screens, and background audio now create a perfect ambiance that reflects our brand story. Shopper engagement has noticeably increased.',
     name: 'Ravi K.', role: 'CEO at INDIA TV' }
 ];
