--- a/index.html
+++ b/index.html
@@ -29,10 +29,15 @@
   html,body{margin:0;background:#fff;color:#000}
   body{font-family:Manrope,system-ui,-apple-system,Segoe UI,Roboto,sans-serif}
 
-  .frame{
-    width:var(--frame-w); height:var(--frame-h);
-    background:#fff; margin:0 auto; position:relative; overflow:hidden;
-  }
+  .frame {
+  width: 100%;
+  max-width: 1439px; /* optional, keeps your design max width */
+  height: auto;
+  aspect-ratio: 1439 / 521; /* keeps proportions */
+  margin: 0 auto;
+  position: relative;
+  overflow: hidden;
+}
   .inner{
     position:absolute; inset:0;
     padding-left:var(--left-inset);
