--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <style>
   :root{
     --muted:#B1B5C0; --emph:#454E59;
-    --frame-w:1439px; --frame-h:521px; --left-inset:200px;
+    --frame-w:1439px; --frame-h:521px; --left-inset:128px;
     --heading-size:40px;
 
     --img-w:394px; --img-h:341px;
@@ -29,15 +29,10 @@
   html,body{margin:0;background:#fff;color:#000}
   body{font-family:Manrope,system-ui,-apple-system,Segoe UI,Roboto,sans-serif}
 
-  .frame {
-  width: 100%;
-  max-width: 1439px; /* optional, keeps your design max width */
-  height: auto;
-  aspect-ratio: 1439 / 521; /* keeps proportions */
-  margin: 0 auto;
-  position: relative;
-  overflow: hidden;
-}
+  .frame{
+    width:var(--frame-w); height:var(--frame-h);
+    background:#fff; margin:0 auto; position:relative; overflow:hidden;
+  }
   .inner{
     position:absolute; inset:0;
     padding-left:var(--left-inset);
